# mlpack_playground

./: .gitmodules
contrib/: CMakeLists.txt
contrib/OpenBLAS/: config.h
contrib/OpenBLAS-cmake/: CMakeLists.txt
contrib/OpenBLAS/lapack-netlib/CBLAS/src/: cblas_dsyrk.c
contrib/armadillo-code-cmake/: CMakeLists.txt
contrib/armadillo-code/include/armadillo_bits/: arma_config.hpp
contrib/boost-cmake/: CMakeLists.txt
contrib/cereal-cmake/: CMakeLists.txt
contrib/mlpack-cmake/: CMakeLists.txt
contrib/mlpack/src/mlpack/methods/linear_regression/: linear_regression.cpp
lib/: CMakeLists.txt  hello.cpp  hello.h
